[SAT] Full refactor